Deployment Ready:Ready to go